--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -101,8 +101,8 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <h2>I no longer have to sniff other cats for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-          <img src="images/dog-img.jpg" class="testimonials-img" alt="cat-profile">
+          <h2>I no longer have to sniff other cats for love. I've found the hottest Corgi on TinCat. Woof.</h2>
+          <img src="images/cat.png" class="testimonials-img" alt="cat-profile">
           <em>Pebbles, New York</em>
         </div>
         <div class="carousel-item">
