--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -30,7 +30,7 @@
     <section id="title">
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-dark">
-                <a class="navbar-brand" href="">Tincat</a>
+                <a class="navbar-brand" href="">tincat</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -222,7 +222,6 @@
     <i class="social-icon fa-brands fa-instagram"></i>
     <i class="social-icon fa-solid fa-envelope"></i>
     <p>© Copyright TinCat</p>
-
 </footer>
 
 </body>
