--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
 <body>
    <div class="cal_layout">
      <div id="d1">
-         <a href="Calculator/index.html">Calculator</a>
+         <a href="Calculator/index.html" target="_blank">Calculator</a>
      </div>
      <div>
-         <a href="Landing Page/index.html">Landing Page</a>
+         <a href="Landing Page/index.html" target="_blank">Landing Page</a>
      </div>
      <div>
-         <a href="Portfolio/index.html">Portfolio</a>
+         <a href="Portfolio/index.html" target="_blank">Portfolio</a>
      </div>
    </div>
 
