--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,15 +1,107 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="eng">
 
 <head>
-
-    <title>Landing page</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dinesh Dhayfule</title>
+    <!-- css style -->
+    <link rel="stylesheet" href="styles.css">
+    <!-- css bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <!-- js bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous">
+    </script>
+    <!-- google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Ubuntu&display=swap"
+        rel="stylesheet">
+    <!-- font awesome  -->
+    <script src="https://kit.fontawesome.com/934e61a7e5.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <div class="first-div">
+        <div class="second-div">
+            <nav class="navbar navbar-expand-lg">
+                <a class="navbar-brand" href="#">
+                    <!-- <img src="images/PD_logo.png" class="logo-img" alt="logo" width="65px" height="65px"> -->
+                    <a href="#" class="logo">
+                        <h2 class="logo-name"><span>D</span>inesh Dhayfule</h2>
+                    </a>
+                    <!-- <span><h2 class="logo-name"><span class="logo-style">P</span>rerana.</h2></span> -->
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon">
+                        <i class="fas fa-bars" style="color:#000000; font-size:28px;"></i>
+                    </span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto tab-element">
+                        <li class="nav-item ">
+                            <a class="nav-link tabs" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link tabs" href="#top">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link tabs" href="#projects">Skills</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link tabs" href="#">Contact Me</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+        <div class="top">
+            <div class="myPic">
+                <img src="img/myPic.png" alt="Dinesh Dhayfule" height="200" width="200">
+            </div>
+           <p class="name">Hi! I'm Dinesh Dhayfule</p>
+           <p class="name name-role">I'am a <span class="name role"></span></p>
+            <p id="para">As a passionate and motivated software developer, I am eager to embark on a career in creating innovative
+                solutions. I bring a strong foundation in software development principles and a quick learner's mindset.
+                I am dedicated to writing clean, efficient code and enthusiastic about contributing to dynamic projects.
+                I am excited to collaborate with experienced teams and eager to grow in this ever-evolving field.</p>
+        </div>
+    </div>
+    <section id="projects">
+        <div>
+            <h1>Featured Projects</h1>
+        </div>
+    </section>
+    <section id="features">
+        <div class="row">
+            <div class="feature-box col-lg-4">
+                <i class="icon fa-solid fa-circle-check fa-4x"></i>
 
+                <h3>Easy to use.</h3>
+                <p>So easy to use, even your cat could do it.</p>
+            </div>
+            <div class="feature-box col-lg-4">
+                <i class="icon fa-solid fa-bullseye fa-4x"></i>
+                <h3>Elite Clientele</h3>
+                <p>We have all the cats, the greatest cats.</p>
+            </div>
+            <div class="feature-box col-lg-4">
+                <i class="icon fa-solid fa-heart fa-4x"></i>
+                <h3>Guaranteed to work.</h3>
+                <p>Find the love of your cat's life or your money back.</p>
+            </div>
+        </div>
+
+    </section>
     <script src="script.js"></script>
+
 </body>
 
 </html>
