--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -70,158 +70,160 @@
         </div>
         </div>
     </section>
-      <!-- Features -->
+    <!-- Features -->
 
-      <section id="features">
-          <div class="row">
-              <div class="feature-box col-lg-4">
-                  <i class="icon fa-solid fa-circle-check fa-4x"></i>
-
-                  <h3>Easy to use.</h3>
-                  <p>So easy to use, even your cat could do it.</p>
-              </div>
-              <div class="feature-box col-lg-4">
-                  <i class="icon fa-solid fa-bullseye fa-4x"></i>
-                  <h3>Elite Clientele</h3>
-                  <p>We have all the cats, the greatest cats.</p>
-              </div>
-              <div class="feature-box col-lg-4">
-                  <i class="icon fa-solid fa-heart fa-4x"></i>
-                  <h3>Guaranteed to work.</h3>
-                  <p>Find the love of your cat's life or your money back.</p>
-              </div>
-          </div>
-
-      </section>
-
-       <!-- Testimonials -->
-
-  <section id="testimonials">
-
-    <div id="carouselExampleControls" class="carousel slide" data-ride="false">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <h2>I no longer have to sniff other cats for love. I've found the hottest Corgi on TinCat. Woof.</h2>
-          <img src="images/cat.png" class="testimonials-img" alt="cat-profile">
-          <em>Pebbles, New York</em>
-        </div>
-        <div class="carousel-item">
-          <h2 class="testimonial-text">My cat used to be so lonely, but with TinCat's help, they've found the love of
-            their life. I think.</h2>
-          <img class="testimonials-img" src="images/lady-img.jpg" alt="lady-profile">
-          <em>Beverly, Illinois</em>
-
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-target="#carouselExampleControls" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </button>
-    </div>
-  </section>
-<!-- Press -->
-
-<section id="press">
-    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
-    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
-    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
-    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
-</section>
-
-
-<!-- Pricing -->
-
-<section id="pricing">
-
-    <h2>A Plan for Every Cat's Needs</h2>
-    <p>Simple and affordable price plans for your and your cat.</p>
-
-    <div class="row">
-        <!-- card-1 -->
-        <div class="pricing-column col-lg-4 col-md-6">
-            <div class="card">
-                <div class="card-header">
-                    <h3>Chihuahua</h3>
-                </div>
-
-                <div class="card-body">
-                    <h2>Free</h2>
-                    <p>5 Matches Per Day</p>
-                    <p>10 Messages Per Day</p>
-                    <p>Unlimited App Usage</p>
-                    <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
-                </div>
-
+    <section id="features">
+        <div class="row">
+            <div class="feature-box col-lg-4">
+                <i class="icon fa-solid fa-circle-check fa-4x"></i>
+                <h3>Easy to use.</h3>
+                <p>So easy to use, even your cat could do it.</p>
+            </div>
+            <div class="feature-box col-lg-4">
+                <i class="icon fa-solid fa-bullseye fa-4x"></i>
+                <h3>Elite Clientele</h3>
+                <p>We have all the cats, the greatest cats.</p>
+            </div>
+            <div class="feature-box col-lg-4">
+                <i class="icon fa-solid fa-heart fa-4x"></i>
+                <h3>Guaranteed to work.</h3>
+                <p>Find the love of your cat's life or your money back.</p>
             </div>
         </div>
+    </section>
 
+    <!-- Testimonials -->
 
-        <!-- card-2 -->
-        <div class="pricing-column col-lg-4 col-md-6">
-            <div class="card">
-                <div class="card-header">
-                    <h3>Labrador</h3>
+    <section id="testimonials">
+
+        <div id="carouselExampleControls" class="carousel slide" data-ride="false">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <h2>I no longer have to sniff other cats for love. I've found the hottest Corgi on TinCat. Woof.
+                    </h2>
+                    <img src="images/cat.png" class="testimonials-img" alt="cat-profile">
+                    <em>Pebbles, New York</em>
                 </div>
+                <div class="carousel-item">
+                    <h2 class="testimonial-text">My cat used to be so lonely, but with TinCat's help, they've found the
+                        love of
+                        their life. I think.</h2>
+                    <img class="testimonials-img" src="images/lady-img.jpg" alt="lady-profile">
+                    <em>Beverly, Illinois</em>
 
-                <div class="card-body">
-                    <h2>$49 / mo</h2>
-                    <p>Unlimited Matches</p>
-                    <p>Unlimited Messages</p>
-                    <p>Unlimited App Usage</p>
-                    <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
-                </div>
-
-            </div>
-        </div>
-
-
-        <!-- card-3 -->
-        <div class="pricing-column col-lg-4">
-            <div class="card">
-                <div class="card-header">
-                    <h3>Mastiff</h3>
-                </div>
-
-                <div class="card-body">
-                    <h2>$99 / mo</h2>
-                    <p>Pirority Listing</p>
-                    <p>Unlimited Matches</p>
-                    <p>Unlimited Messages</p>
-                    <p>Unlimited App Usage</p>
-                    <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
                 </div>
             </div>
+            <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls"
+                data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-target="#carouselExampleControls"
+                data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </button>
         </div>
+    </section>
+    <!-- Press -->
 
-    </div>
-</section>
-
-
-<!-- Call to Action -->
-
-<section id="cta">
-
-    <h3>Find the True Love of Your Cat's Life Today.</h3>
-    <button type="button" class="btn btn-dark btn-lg dow-buttn"><i class="fa-brands fa-apple"></i> Download</button>
-    <button type="button" class="btn btn-light btn-lg dow-buttn"><i
-            class="fa-brands fa-google-play"></i>Download</button>
-
-</section>
+    <section id="press">
+        <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
+        <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+        <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
+        <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
+    </section>
 
 
-<!-- Footer -->
+    <!-- Pricing -->
 
-<footer id="footer">
-    <i class="social-icon fa-brands fa-twitter"></i>
-    <i class="social-icon fa-brands fa-facebook-f"></i>
-    <i class="social-icon fa-brands fa-instagram"></i>
-    <i class="social-icon fa-solid fa-envelope"></i>
-    <p>© Copyright TinCat</p>
-</footer>
+    <section id="pricing">
+
+        <h2>A Plan for Every Cat's Needs</h2>
+        <p>Simple and affordable price plans for your and your cat.</p>
+
+        <div class="row">
+            <!-- card-1 -->
+            <div class="pricing-column col-lg-4 col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h3>Chihuahua</h3>
+                    </div>
+
+                    <div class="card-body">
+                        <h2>Free</h2>
+                        <p>5 Matches Per Day</p>
+                        <p>10 Messages Per Day</p>
+                        <p>Unlimited App Usage</p>
+                        <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
+                    </div>
+
+                </div>
+            </div>
+
+
+            <!-- card-2 -->
+            <div class="pricing-column col-lg-4 col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h3>Labrador</h3>
+                    </div>
+
+                    <div class="card-body">
+                        <h2>$49 / mo</h2>
+                        <p>Unlimited Matches</p>
+                        <p>Unlimited Messages</p>
+                        <p>Unlimited App Usage</p>
+                        <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
+                    </div>
+
+                </div>
+            </div>
+
+
+            <!-- card-3 -->
+            <div class="pricing-column col-lg-4">
+                <div class="card">
+                    <div class="card-header">
+                        <h3>Mastiff</h3>
+                    </div>
+
+                    <div class="card-body">
+                        <h2>$99 / mo</h2>
+                        <p>Pirority Listing</p>
+                        <p>Unlimited Matches</p>
+                        <p>Unlimited Messages</p>
+                        <p>Unlimited App Usage</p>
+                        <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+
+    <!-- Call to Action -->
+
+    <section id="cta">
+
+        <h3>Find the True Love of Your Cat's Life Today.</h3>
+        <button type="button" class="btn btn-dark btn-lg dow-buttn"><i class="fa-brands fa-apple"></i> Download</button>
+        <button type="button" class="btn btn-light btn-lg dow-buttn"><i
+                class="fa-brands fa-google-play"></i>Download</button>
+
+    </section>
+
+
+    <!-- Footer -->
+
+    <footer id="footer">
+        <i class="social-icon fa-brands fa-twitter"></i>
+        <i class="social-icon fa-brands fa-facebook-f"></i>
+        <i class="social-icon fa-brands fa-instagram"></i>
+        <i class="social-icon fa-solid fa-envelope"></i>
+        <p>© Copyright TinCat</p>
+    </footer>
 
 </body>
 
