--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -182,14 +182,18 @@
                          <img class="Pimg" id="weather" onmouseover="over(1)" onmouseleave="out(1)" src="images/w.jpg"
                              alt="weather">
                          <h3 class="Ph3">weather js app</h3>
-                         <p class="Pc">So easy to use, even your cat could do it.</p>
+                         <p class="Pc">
+                             A weather JavaScript app is a web application built using JavaScript that fetches and
+                             displays current weather info.</p>
                      </div>
                  </div>
                  <div class="feature-box ">
                      <div class="bg">
                          <img class="Pimg" src="images/joke.png" alt="joke">
                          <h3 class="Ph3">Joke Loader</h3>
-                         <p class="Pc">So easy to use, even your cat could do it.</p>
+                         <p class="Pc">
+                             "JavaScript app that delivers a daily dose of laughter with a click – your go-to random
+                             joke generator for instant smiles!"</p>
                      </div>
                  </div>
                  <div class="feature-box">
@@ -222,7 +226,8 @@
                      <div class="bg">
                          <img id="convert" class="Pimg" src="images/convert.jpg"  onmouseover="over(2)" onmouseleave="out(2)"alt="drum">
                          <h3 class="Ph3">Currency Converter</h3>
-                         <p class="Pc">So easy to use, even your cat could do it.</p>
+                         <p class="Pc">A PHP-based currency converter app that facilitates seamless and real-time
+                             currency exchange rate calculations.</p>
                      </div>
                  </div>
                  <div class="feature-box ">
@@ -234,23 +239,26 @@
                  </div>
                  <div class="feature-box ">
                      <div class="bg">
-                         <img class="Pimg" src="images/vaccine.png" alt="Emedico">
+                         <img class="Pimg" src="images/medico.jpg" alt="Emedico">
                          <h3 class="Ph3">Emedico app</h3>
-                         <p class="Pc">So easy to use, even your cat could do it.</p>
+                         <p class="Pc">Java-based E-Medicine Delivery App: Streamlining healthcare access by providing
+                             a user-friendly platform for ordering and delivering medicines</p>
                      </div>
                  </div>
                  <div class="feature-box ">
                      <div class="bg">
                          <img class="Pimg" src="images/ic_icon.jpg" alt="BlueChat   ">
                          <h3 class="Ph3">BlueChat app</h3>
-                         <p class="Pc">So easy to use, even your cat could do it.</p>
+                         <p class="Pc">Android app enabling seamless communication through Bluetooth connectivity for
+                             real-time chat</p>
                      </div>
                  </div>
                  <div class="feature-box ">
                      <div class="bg">
                          <img class="Pimg" src="images/ic_wechat.png" alt="wechat" height="250" width="fit-content">
                          <h3 class="Ph3">wechat app</h3>
-                         <p class="Pc">A Chatting android application.</p>
+                         <p class="Pc">A Chatting android application,Engage in seamless and intuitive conversations
+                             with friends through our user-friendly chat Android app..</p>
                      </div>
                  </div>
              </div>
@@ -294,7 +302,7 @@
                 </div>
             </div>
         
-
+<!-- 
         <div class="end">
             <div class="end-1">
                 <i class="social-icon fa-brands fa-twitter"></i>
@@ -314,7 +322,7 @@
                         style="color: #ffffff;"></i></a>
             </div>
         </div></footer>
-    </div>
+    </div> -->
     <script src="script.js"></script>
 
 </body>
